# LRCTOOLSBOX

./: .flake8  .gitignore  BATCH_RENDER_COMPLETE.md  BATCH_RENDER_RELEASE_NOTES.md  README.md  SETUP_COMPLETE.md  bash.exe.stackdump  logs.md  pyproject.toml  pytest.ini  test_imports.py
.augment/rules/imported/: rules.md
.plan/: FEATURE_SUMMARY_place3d_matrix.md  IMPLEMENTATION_COMPLETE_place3d_matrix.md  QUICK_START_place3d_matrix.md  implement_feature_place3d_matrix.md
docs/: python27_conversion_complete.md  python27_conversion_plan.md  ref2ints_py27_shader_fix_status.md
maya/: CHECK_QPROXYSTYLE_FIX.py  IMPLEMENTATION_COMPLETE.md  LOAD_COMMANDS.md  MANUAL_LOAD_NO_ENV.py  MATRIX_NAMING_EXPLANATION.md  MAYA_SETUP_GUIDE.md  QUICK_LOAD.py  README_MAYA_PLUGIN.md  UI_UPDATES_SUMMARY.md  compare_constraint_vs_matrix_naming.py  diagnose_matrix_issue.py  diagnose_namespace_mismatch.py  install_plugin.py  load_lrc_toolbox.py  test_matrix_multiple_assets.py
maya/lrc_toolbox/: __init__.py  main.py
maya/lrc_toolbox/cli/: __init__.py  batch_render_cli.py
maya/lrc_toolbox/config/: batch_render_defaults.py  defaults.py  session_manager.py  settings.py
maya/lrc_toolbox/core/: __init__.py  batch_render_api.py  light_manager.py  models.py  process_manager.py  project_manager.py  render_execution_manager.py  render_setup_api.py  scene_preparation.py  system_detector.py  template_exporter.py  template_manager.py  version_manager.py
maya/lrc_toolbox/docs/: BATCH_RENDER_FEATURES.md  BATCH_RENDER_FIXES.md  BATCH_RENDER_IMPLEMENTATION_COMPLETE.md  BATCH_RENDER_README.md  BATCH_RENDER_RESEARCH.md  BATCH_RENDER_TROUBLESHOOTING.md  CAMERA_SELECTION_GUIDE.md  GPU_DETECTION_FIX.md  TEMP_PATH_STRUCTURE.md  quick_template_implementation.md  save_settings_menu_usage.md
maya/lrc_toolbox/examples/: demo_template_fixes.py  one_liner_save_settings.py  quick_template_demo.py  simple_suffix_test.py  template_integration_demo.py  test_plugin_command.py  test_plugin_fix.py  verify_installation.py
maya/lrc_toolbox/exporters/: __init__.py  base_exporter.py  scene_exporter.py
maya/lrc_toolbox/importers/: __init__.py  base_importer.py  light_importer.py  scene_importer.py
maya/lrc_toolbox/tests/: __init__.py  test_batch_render.py  test_crash_detection.py  test_gpu_detection.py  test_gpu_fix.py  test_manual_render_script.py  test_mayapy_minimal.py  test_nvidia_smi_direct.py  (+6 more)
maya/mockup/: FIX_UNICODE_ERROR.py  JSON_EXPORT_README.md  README_UNICODE_FIX.md  abc2on2.py  camera_reference_cleanup.py  camera_reference_cleanup_py27.py  igl_shot_build.py  igl_shot_build.py.backup  lrc_manager.py  ref2ints.py  ref2ints_py27.py  sample_shot_data.json  save_and_setting.py  sets_instance_test.py  sets_instance_test_py27.py  shot_build.md  test_json_export.py
maya/plan/: batch_render_APPROVED_PLAN.md  batch_render_final_approach.md  batch_render_implementation_plan.md  batch_render_requirements.md  batch_render_tasks.md  batch_render_technical_spec.md  implement_plan.md  rules.md  task.md  ui_design.md  user_journey.md
maya/plugins/: lrc_toolbox_plugin.py
tools/: convert_fstrings.py
(+46 files in other folders)
